@@ -1,9 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.3 2001-08-19 10:58:34 mschimek Exp $
+dnl $Id: configure.in,v 1.4 2001-09-12 23:06:48 garetxe Exp $
 
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(rte, 0.3)
 AM_CONFIG_HEADER(config.h)
+
+AC_PROG_CC
 
 dnl Stupid rpm in SuSE
 CFLAGS="-g -O2 -Wall -fomit-frame-pointer"
@@ -20,7 +22,21 @@ test -e site_def.h || cat <<EOF >site_def.h
 #endif /* SITE_DEF_H */
 EOF
 
-AC_PROG_CC
+AC_CHECK_HEADER(linux/soundcard.h,AC_DEFINE(OSS, 1,
+					    [Define if you have linux/soundcard.h]))
+
+AC_MSG_CHECKING(for EsounD)
+ESD_VERSION=`esd-config --version`
+if test $? -eq 0; then
+	AC_MSG_RESULT($ESD_VERSION)
+	ESD_LIBS=`esd-config --libs`
+	ESD_CFLAGS=`esd-config --cflags`
+	AC_SUBST(ESD_CFLAGS)
+	AC_SUBST(ESD_LIBS)
+	AC_DEFINE(USE_ESD, 1, [Define if you have ESD.])
+else
+	AC_MSG_RESULT([no, ESD won't be used])
+fi
 
 dnl Check whether program_invocation_name exists, GNU extension
 AC_CHECK_FUNCS(program_invocation_name)
