@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.6 2001-09-02 03:26:58 mschimek Exp $
+dnl $Id: configure.in,v 1.7 2001-09-12 23:06:49 garetxe Exp $
 
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(mp1e, 1.9.1)
@@ -87,6 +87,8 @@ ESD_VERSION=`esd-config --version`
 if test $? -eq 0; then
 	AC_MSG_RESULT($ESD_VERSION)
 	ESD_LIBS=`esd-config --libs`
+	ESD_CFLAGS=`esd-config --cflags`
+	AC_SUBST(ESD_CFLAGS)
 	AC_SUBST(ESD_LIBS)
 	AC_DEFINE(USE_ESD, 1, [Define if you have ESD.])
 else
